Still fixing h1 on small screens

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -45,6 +45,6 @@
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
-    font-size: 4rem;
+    font-size: 3.5rem;
   }
 }
